Fixed aside:hover visibility issue

--- a/styles/lab04.css
+++ b/styles/lab04.css
@@ -72,7 +72,7 @@ h1 {
 
 /* Style for aside when hovered upon */
 aside:hover {
-    display: none;
+    visibility: hidden;
 }
 
 /* style for menu when hovered */
